change bg contacts, remove stickers

--- a/contacts.html
+++ b/contacts.html
@@ -82,7 +82,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main-contacts">
         <div class="p-head-breadcrumb">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
@@ -171,25 +171,11 @@
 
             <section class="section-contacts">  
                 <div class="row justify-content-around">
-                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
+                    <div class="col-12">
                         <h5>Справочная служба:</h5>
                         <i class="demo-icon icon-phone"></i>+38(05366) 4-13-60<br>
                         <i class="demo-icon icon-phone"></i>+38(0536) 76-84-09
                     </div>
-                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
-                        <h5>Контактные телефоны отдела реализации:</h5>
-                        <i class="demo-icon icon-phone"></i>(0536) 76-80-40;<br>
-                        <i class="demo-icon icon-phone"></i>76-81-08;<br>
-                        <i class="demo-icon icon-phone"></i>76-81-08;<br>
-                        <i class="demo-icon icon-phone"></i>76-11-62;<br>
-                        <i class="demo-icon icon-phone"></i>76-11-44.
-                    </div>
-                </div>
-                <!-- </div> -->
-            </section>
-
-            <!-- <section class="section-contacts">  
-                <div class="row">
                     <div class="col-12">
                         <h5>Контактные телефоны отдела реализации:</h5>
                         <i class="demo-icon icon-phone"></i>(0536) 76-80-40;<br>
@@ -198,36 +184,17 @@
                         <i class="demo-icon icon-phone"></i>76-11-62;<br>
                         <i class="demo-icon icon-phone"></i>76-11-44.
                     </div>
-                </div>
-            </section> -->
-
-            <section class="section-contacts">  
-                <div class="row justify-content-around">
-                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-green">
+                    <div class="col-12">
                         <h5>Контактные телефоны отдела сырьевого обеспечения:</h5>
                         <i class="demo-icon icon-phone"></i>(0536) 76-11-24;<br>
                         <i class="demo-icon icon-phone"></i>76-14-89;<br>
                         <i class="demo-icon icon-phone"></i>76-14-82.
                     </div>
-                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-green">
-                        <h5>Управление материально-технического обеспечения:</h5>
-                        <i class="demo-icon icon-phone"></i>+ 38 (0536) 76-88-79
-                    </div>
-                </div>
-            </section>
-
-            <!-- <section class="section-contacts">  
-                <div class="row">
                     <div class="col-12">
                         <h5>Управление материально-технического обеспечения:</h5>
                         <i class="demo-icon icon-phone"></i>+ 38 (0536) 76-88-79
                     </div>
-                </div>
-            </section> -->
-
-            <section class="section-contacts">  
-                <div class="row justify-content-around">
-                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
+                    <div class="col-12">
                         <h5>Сектор по связям с общественностью ПАО "Укртатнафта":</h5>
                         <ul>
                             <li>
@@ -244,7 +211,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-xl-4 col-lg-5 col-md-6 col-sm-10 bg-sticker-orange">
+                    <div class="col-12">
                         <h5>Управление кадров и технического обучения(по вопросам трудоустройства и отправки резюме):</h5>
                         <ul>
                             <li>
@@ -260,6 +227,43 @@
                     </div>
                 </div>
             </section>
+
+
+            <!-- <section class="section-contacts">  
+                <div class="row justify-content-around">
+                    <div class="col-12">
+                        <h5>Сектор по связям с общественностью ПАО "Укртатнафта":</h5>
+                        <ul>
+                            <li>
+                                <span>Телефон:</span>
+                                <i class="demo-icon icon-phone"></i> +38 (0536) 76-88-33
+                            </li>
+                            <li>
+                                <span>Fax:</span>
+                                <i class="demo-icon icon-fax"></i>+38 (0536) 76-84-74
+                            </li>
+                            <li>
+                                <span>Email:</span>
+                                <a href="mailto:smb@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>smb@ukrtatnafta.com</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-12">
+                        <h5>Управление кадров и технического обучения(по вопросам трудоустройства и отправки резюме):</h5>
+                        <ul>
+                            <li>
+                                <span>Телефон:</span><br/>
+                                <i class="demo-icon icon-phone"></i> +38 (0536) 76-84-61<br/>
+                                <i class="demo-icon icon-phone"></i> +38 (0536) 76-10-60
+                            </li>  
+                            <li>
+                                <span>Email:</span>
+                                <a href="mailto:margo@ukrtatnafta.com"><i class="demo-icon icon-mail-alt"></i>margo@ukrtatnafta.com</a>
+                            </li>                         
+                        </ul>
+                    </div>
+                </div>
+            </section> -->
 
             <!-- <section class="section-contacts">  
                 <div class="row">
