change site after recommendation by bolenkiy v.1.0

--- a/about_us.html
+++ b/about_us.html
@@ -144,37 +144,6 @@
                         <img src="img/about-us-black-2.jpg" alt="История">
                     </div>
                 </div>
-                <!-- <div class="row about-us-chronology">
-                    <div class="col-12">
-                        <ul>
-                            <li><span>1961</span> Начало строительства Кременчугского НПЗ.</li>
-                            <li><span>1966</span> Комбинированная установка АВТ А-12/5.</li>
-                            <li><span>1967</span> Установка каталитического риформирования бензинов Л-35/11-300. Битумная установка 19/6.</li>
-                            <li><span>1969</span> Газофракционирующая установка (ГФУ).</li>
-                            <li><span>1969-1970	</span> Комбинированная установка ГК-3/1№1 с блоками первичной переработки нефти и каталитического крекинга.</li>
-                            <li><span>1971</span> Установка каталитического риформинга ЛЧ-35/11-600. Установка гидроочистки дизельного топлива ЛЧ-24/7-68.</li>
-                            <li><span>1972</span> Блок первичной переработки нефти комбинированной установки ГК-3/1№2.</li>
-                            <li><span>1974-1976	</span> Установка каталитического риформинга с экстракцией ароматических углеводородов ЛГ-35-8/300"Б". Комплекс установок по производству смазочных масел (Г-37, Г-39-40, Г-36-37, Г-24). Сероочистка сухих газов. Блок каталитического крекинга комбинированной установки ГК-3/1№2.</li>
-                            <li><span>1977</span> Установка по производству элементарной серы.</li>
-                            <li><span>1978</span> Комбинированная установка по переработке нефти ЛК-6у (первичная переработка нефти, каталитическое риформирование бензинов, гидроочистка керосинов и дизельного топлива, газофракционирование).</li>
-                            <li><span>1981</span> Комплекс по производству детергентно-диспергирующей присадки типа АМОКО-9250.</li>
-                            <li><span>1984</span> Установка по производству жидких парафинов методом "Парекс".</li>
-                            <li><span>1988</span> Комплекс установок регенерации отработанных масел.</li>
-                            <li><span>2001</span> Установка по выпуску метил-трет-бутилового эфира.</li>
-                            <li><span>2005</span> Установка ректификации сульфидсодержащих конденсатов.</li>
-                            <li><span>2006</span> Замена катализаторных систем на С-200 установки ЛК-6У.</li>
-                            <li><span>2008</span> Замена каталиэаторных систем и внутренних устройств на установке ЛЧ-35/11-600.</li>
-                            <li><span>2009</span> Замена катализаторных систем и внутренних устройств на установке ЛЧ-35/11-300.</li>
-                            <li><span>2009</span> Замена катализаторных систем и внутренних устройств на установке ЛЧ-24-7/68 (получение дизельного топлива Евро-4).</li>
-                            <li><span>2009</span> Замена катализаторных систем и внутренних устройств на секции 300/1 установки ЛК-6у с целью организации процесса гидроочистки вакуумного газойля (получение автомобильных бензинов Евро-3).</li>
-                            <h4>Сведения об оргструктуре:</h4>
-                            <li><span>1961-1994	</span> Государственное предприятие Кременчугский нефтеперерабатывающий завод.</li>
-                            <li><span>1994</span> Открытое акционерное общество "Кременчугнефтеоргсинтез".</li>
-                            <li><span>С 1994</span> Закрытое акционерное общество транснациональная финансово-промышленная нефтяная компания "Укртатнафта".</li>
-                            <li><span>С 2010</span> Публичное акционерное общество «Транснациональная финансово-промышленная нефтяная компания «Укртатнафта».</li>                            
-                        </ul>
-                    </div>                    
-                </div> -->
                 <div class="row about-us-chronology">
                     <div class="col-2">1961</div><div class="col-10">Начало строительства Кременчугского НПЗ.</div>
                     <div class="col-2">1966</div><div class="col-10">Комбинированная установка АВТ А-12/5.</div>
@@ -204,6 +173,16 @@
                     <div class="col-2">1994</div><div class="col-10">Открытое акционерное общество "Кременчугнефтеоргсинтез".</div>
                     <div class="col-2">С 1994</div><div class="col-10">Закрытое акционерное общество транснациональная финансово-промышленная нефтяная компания "Укртатнафта".</div>
                     <div class="col-2">С 2010</div><div class="col-10">Публичное акционерное общество «Транснациональная финансово-промышленная нефтяная компания «Укртатнафта».</div>
+                </div>
+                <div class="row about-us-directors">
+                    <div class="col-8">Председатель Правления</div><div class="col-4"><b>Овчаренко<br> Павел Владимирович</b></div>
+                    <div class="col-8">Первый заместитель Председателя Правления</div><div class="col-4"><b>Плакасов<br>Алексей Николаевич</b></div>
+                    <div class="col-8">Заместитель Председателя Правления по производству и капитальному строительству</div><div class="col-4"><b>Кошелюк<br>Сергей Степанович</b></div>
+                    <div class="col-8">Заместитель Председателя Правления по правовым и корпоративным вопросам</div><div class="col-4"><b>Корнеляк<br>Валерий Владимирович</b></div>
+                    <div class="col-8">Заместитель Председателя Правления по персоналу и социальной сфере</div><div class="col-4"><b>Ляпка<br>Руслан Владимирович</b></div>
+                    <div class="col-8">Заместитель Председателя Правления по коммерческим вопросам</div><div class="col-4"><b>Пинчук<br>Андрей Иванович</b></div>
+                    <div class="col-8">Заместитель Председателя Правления - начальник финансово-экономического управления</div><div class="col-4"><b>Бабиченко <br>Виктор Владимирович</b></div>
+                    <div class="col-8">Главный бухгалтер, член Правления</div><div class="col-4"><b>Оголяр<br>Елена Леонидовна</b></div>
                 </div>
             </div>
         </section>
