--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link lol" href="#" id="navbarDropdownMenuLink" 
+                            <a class="nav-link " href="#" id="navbarDropdownMenuLink" 
                             aria-haspopup="true" aria-expanded="false">Новости<i class="demo-icon icon-down-open-mini"></i>
 
                             </a>
@@ -61,15 +61,16 @@
                                 <a class="nav-link" href="#" id="navbarDropdownMenuLink"  aria-haspopup="true"
                                     aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
+                                        <a class="dropdown-item" href="#"><i class="demo-icon icon-basket"></i> Реализация неликвидов</a>
+                                    <!-- <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a> -->
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
                                     <a class="dropdown-item" href="trade_og.html"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
+                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>                                    
                                 </div>
                             </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Сопутствующий бизнес</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                                 <a class="nav-link" href="#">Наши потребности</a>
                         </li>
@@ -271,9 +272,9 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
-        <!-- <section class="section-images">
+        <section class="section-images">
             <div class="container-fluid">
                 <div class="row images-section">                    
                     <div class="col-3">
@@ -333,9 +334,9 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
 
-        <!-- <section class="contact-from-section">
+        <section class="contact-from-section">
                 <h2 class="news-h2">Напишите нам</h2>
             <div class="container">
                 <div class="row justify-content-center">
@@ -359,7 +360,19 @@
     <footer>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-3">
+                <div class="col-xl-3 col-lg-3 footer-links">                                     
+                    <ul>
+                        <h2>Полезные ссылки</h2>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                        <li>google.com</li>
+                    </ul>                    
+                    <a href="#"><img src="img/energy-white-2.png" alt="Energy"></a>   
+                </div>
+                <div class="col-xl-3 col-lg-3">
                     <ul>
                         <h2>Контакты</h2>
                         <li>096666666666</li>
@@ -369,38 +382,41 @@
                         <li>096666666666</li>
                         <li>096666666666</li>
                     </ul>
-                </div>
-                <div class="col-xl-3">
-                    <ul>
-                        <h2>Полезные ссылки</h2>
-                        <li>google.com</li>
-                        <li>google.com</li>
-                        <li>google.com</li>
-                        <li>google.com</li>
-                        <li>google.com</li>
-                        <li>google.com</li>
-                    </ul>
                     <div class="subscribe">
                         <h2>Подписки:</h2>
                         <div class="subscribe-news-wrap">
-                            <label for="subscribe-news">Новости:</label>
+                            <!-- <label for="subscribe-news">Новости:</label> -->
+                            <div>
+                                <input type="checkbox" id="news" name="news">
+                                <label for="news">Новости</label>
+                            </div>                            
+                                
+                            <div>
+                                <input type="checkbox" id="publication" name="publication">
+                                <label for="news">Публикации</label>
+                            </div>
+
+                            <div>
+                                <input type="checkbox" id="realization" name="realization">
+                                <label for="news">Реализация</label>
+                            </div>
+
                             <input type="text" id="subscribe-news" placeholder="email">
                             <button class="subscribe-news-btn">
-                                    <i class="demo-icon icon-paper-plane"></i>
+                                <i class="demo-icon icon-paper-plane"></i>
                             </button>
                         </div>
 
-                        <div class="subscribe-news-wrap">
+                        <!-- <div class="subscribe-news-wrap">
                             <label for="subscribe-news">Публикации:</label>
                             <input type="text" id="subscribe-news" placeholder="email">
                             <button class="subscribe-news-btn">
                                     <i class="demo-icon icon-paper-plane"></i>
                             </button>
-                        </div>                       
-
+                        </div> -->
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="offset-xl-1 col-xl-4 col-lg-6">
                     <div class="col-12"><h2>Напишите нам</h2></div>
                     <form class="form-footer mb-5" action="#" >
                         <div class="row">                            
