--- a/news.html
+++ b/news.html
@@ -317,6 +317,6 @@
     <script src="js/jquery-3.3.1.min.js"  type="text/javascript"></script>
     <script src="js/parallax.min.js"  type="text/javascript"></script>    
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>    
+    <script src="js/news.js" type="text/javascript"></script>    
 </body>
 </html>
