--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <a class="dropdown-item" href="power.html"><i class="demo-icon icon-flash"></i> Поставка электроэнергии</a>
                                 <a class="dropdown-item" href="ecology.html"><i class="demo-icon icon-envira"></i> Экология</a>
                                 <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
+                                <a class="dropdown-item" href="tel_service.html"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
                                 <a class="dropdown-item" href="about_us.html"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
                             </div>
                         </li>
@@ -426,7 +426,7 @@
                         <li>google.com</li>
                         <li>google.com</li>
                     </ul>                    
-                    <a href="#"><img src="img/energy-white-2.png" alt="Energy"></a>   
+                    <a href="energy.html"><img src="img/energy-white-2.png" alt="Energy"></a>   
                 </div>
                 <div class="col-xl-3 col-lg-3">
                     <ul>
