--- a/social.html
+++ b/social.html
@@ -102,7 +102,7 @@
             </div> 
         </div>
 
-        <div class="container social-headline">
+        <div class="container social-headline pt-5">
             <div class="row ">
                 <div class="col-12">
                     <p class="text-ind">
@@ -489,8 +489,8 @@
     
     
     <script src="js/jquery-3.3.1.min.js"  type="text/javascript"></script>
-    <script src="js/parallax.min.js"  type="text/javascript"></script>    
+    <!-- <script src="js/parallax.min.js"  type="text/javascript"></script>     -->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>    
+    <!-- <script src="js/script.js" type="text/javascript"></script>     -->
 </body>
 </html>
