--- a/about_us.html
+++ b/about_us.html
@@ -103,7 +103,7 @@
         </div>
 
         <section>
-            <div class="container container-about-us">
+            <div class="container container-about-us pt-4">
                 <div class="row justify-content-center">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 about-us-head-img">
                         <img src="img/about_us_header.JPG" alt="Завод">
@@ -271,8 +271,8 @@
     
     
     <script src="js/jquery-3.3.1.min.js"  type="text/javascript"></script>
-    <script src="js/parallax.min.js"  type="text/javascript"></script>    
+    <!-- <script src="js/parallax.min.js"  type="text/javascript"></script>     -->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>    
+    <!-- <script src="js/script.js" type="text/javascript"></script>     -->
 </body>
 </html>
