--- a/news.html
+++ b/news.html
@@ -19,7 +19,7 @@
 <body class="body-news">
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-xl navbar-light bg-white main-menu">
+            <nav class="navbar navbar-expand-xl navbar-light  main-menu">
                 <div class="menu-logo-lang">
                     <a href="index.html" class="navbar-brand ">
                         <img src="img/utn-logo.jpg" class="navbar-logo" width="200" alt="logo">
@@ -37,7 +37,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link lol" href="#" id="navbarDropdownMenuLink" 
+                            <a class="nav-link " href="#" id="navbarDropdownMenuLink" 
                             aria-haspopup="true" aria-expanded="false">Новости<i class="demo-icon icon-down-open-mini"></i>
 
                             </a>
@@ -55,27 +55,28 @@
                                 <a class="dropdown-item" href="ecology.html"><i class="demo-icon icon-envira"></i> Экология</a>
                                 <a class="dropdown-item" href="social.html"><i class="demo-icon icon-users"></i> Социальная сфера</a>
                                 <a class="dropdown-item" href="#"><i class="demo-icon icon-info-circled"></i> Раскрытие информации</a>
-                                <a class="dropdown-item" href="#"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
+                                <a class="dropdown-item" href="about_us.html"><i class="demo-icon icon-question-circle-o"></i> О нас</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
                                 <a class="nav-link" href="#" id="navbarDropdownMenuLink"  aria-haspopup="true"
                                     aria-expanded="false">Наш бизнес<i class="demo-icon icon-down-open-mini"></i></a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a>
+                                        <a class="dropdown-item" href="#"><i class="demo-icon icon-basket"></i> Реализация неликвидов</a>
+                                    <!-- <a class="dropdown-item" href="azs.html"><i class="demo-icon icon-cab"></i> Автомобилистам</a> -->
                                     <a class="dropdown-item" href="#"><i class="demo-icon icon-dollar"></i> Цены</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
-                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>
+                                    <a class="dropdown-item" href="trade_og.html"><i class="demo-icon icon-handshake-o"></i> Реализация нефтепродуктов</a>
+                                    <a class="dropdown-item" href="#"><i class="demo-icon icon-plane"></i> Реализация авиатоплива</a>                                    
                                 </div>
                             </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">Сопутствующий бизнес</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                                 <a class="nav-link" href="#">Наши потребности</a>
                         </li>
                         <li class="nav-item">
-                                <a class="nav-link" href="#">Контакты</a>
+                                <a class="nav-link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </div>
@@ -315,7 +316,7 @@
         <p class="mb-0">Create by: miraclus1@gmail.com</p>
     </footer>  
     <script src="js/jquery-3.3.1.min.js"  type="text/javascript"></script>
-    <script src="js/parallax.min.js"  type="text/javascript"></script>    
+    <!-- <script src="js/parallax.min.js"  type="text/javascript"></script>     -->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/news.js" type="text/javascript"></script>    
 </body>
