--- a/power.html
+++ b/power.html
@@ -271,8 +271,8 @@
     
     
     <script src="js/jquery-3.3.1.min.js"  type="text/javascript"></script>
-    <script src="js/parallax.min.js"  type="text/javascript"></script>    
+    <!-- <script src="js/parallax.min.js"  type="text/javascript"></script>     -->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>    
+    <!-- <script src="js/script.js" type="text/javascript"></script>     -->
 </body>
 </html>
