--- a/trade_og.html
+++ b/trade_og.html
@@ -99,7 +99,7 @@
         </div>
 
         <section>
-            <div class="container container-trade_og">
+            <div class="container container-trade_og pt-4">
                 <div class="row">
                     <div class="col-12">
                         <h2>Информация по методике формирования планов отгрузки автомобильным транспортом</h2>                        
@@ -121,7 +121,7 @@
                             <li>Время работы факса с 8:00 до 20:00</li>
                         </ul>
                         <p><strong>Обращаем Ваше внимание, что формирование планов отгрузки нефтепродуктов происходит автоматически.</strong></p>
-                        <ul>
+                        <ul class="pb-5">
                             <h3>Контактные лица при отгрузке:</h3>
                             <li>Бондарев Максим Владимирович – (0536) 76-80-40</li>
                             <li>Шевчук Анна Вячеславовна – (0536) 76-81-08</li>
@@ -214,8 +214,8 @@
     
     
     <script src="js/jquery-3.3.1.min.js"  type="text/javascript"></script>
-    <script src="js/parallax.min.js"  type="text/javascript"></script>    
+    <!-- <script src="js/parallax.min.js"  type="text/javascript"></script>     -->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>    
+    <!-- <script src="js/script.js" type="text/javascript"></script>     -->
 </body>
 </html>
