change size img for slider

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </ol>
                 <div class="carousel-item active">
                     <div class="cover-dark"></div>
-                    <img src="img/slider/1_1.png" alt="First slide" class="d-block w-100">
+                    <img src="img/slider/1_1.jpg" alt="First slide" class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
                             <h5 class="">Лучшие в своем деле</h5>
                             <p class="">Обратись и убедись</p>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="cover-dark"></div>
-                    <img src="img/slider/2_2.png" alt="Second slide" class="d-block w-100">
+                    <img src="img/slider/2_2.jpg" alt="Second slide" class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="">Самая вкусная нефть</h5>
                         <p class="">Первая бочка бесплатно</p>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="cover-dark"></div>
-                    <img src="img/slider/3_3.png" alt="Third slide" class="d-block w-100">
+                    <img src="img/slider/3_3.jpg" alt="Third slide" class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 class="">Без нас нет движения</h5>
                         <p class="">Двигайся с нами!</p>
