change img size for power.html

--- a/production.html
+++ b/production.html
@@ -106,7 +106,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 production-img">
-                        <img src="img/facility.JPG" alt="Установка">
+                        <img src="img/facility_1.jpg" alt="Установка">
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                             <p>Переработка нефти осуществляется по топливно-масляной схеме с использованием следующих процессов:</p> 
@@ -145,7 +145,7 @@
             <div class="container">
                 <div class="row">                    
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 production-img">
-                        <img src="img/facility_2.JPG" alt="Установка">
+                        <img src="img/facility_2_1.jpg" alt="Установка">
                     </div>
                     <!-- <div class="offset-2"></div> -->
                     <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
@@ -160,7 +160,7 @@
             <div class="container">
                 <div class="row">                    
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 production-img">
-                        <img src="img/power-people.JPG" alt="Установка">
+                        <img src="img/power-people_1.jpg" alt="Установка">
                     </div>
                     <!-- <div class="offset-2"></div> -->
                     <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
