change all img size

--- a/ecology.html
+++ b/ecology.html
@@ -94,7 +94,7 @@
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col">
-                                <h2>Экология</h2>                            
+                            <h2>Экология</h2>                            
                         </div>
                         <div class="col-auto pull-right">
                             <nav aria-label="breadcrumb">
@@ -173,7 +173,7 @@
                                             <h3>Мониторинг окружающей среды осуществляется по трем направлениям:</h3>
                                             <h2 id="item-2">2. ОХРАНА АТМОСФЕРНОГО ВОЗДУХА</h2>
                                             <!-- TODO:   переделать img в picture -->
-                                            <img src="img/ecology-air-protection2.JPG" alt="Охрана атмосферного воздуха" >
+                                            <img src="img/ecology-air-protection2_1.jpg" alt="Охрана атмосферного воздуха" >
                                             <p>Сокращение вредных выбросов в атмосферу — одно из приоритетных направлений деятельности предприятия в сфере экологии.
                                                 Контроль за состоянием атмосферы в ПАО «Укртатнафта» проводится собственной аттестованной лабораторией: </p>
                                             <p id="item-2-1"><a href="ecofiles/lab-cert-ua.pdf" class="red-link" target="_blank"><i class="demo-icon icon-file-pdf"></i>Свидетельство о соответствии состояния системы измерений" № 015-17 КФ от 08.09.17 г.. Действительно до 07.09.2020 года.</a>     
