--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
-                                    <img src="img/car.png" alt="Новости">
+                                    <img src="img/car.jpg" alt="Новости">
                                     <div class="news-bg-img"><img src="img/zoom-icon.svg" alt=""></div>
                                 </div>                            
                                 <span>30.01.2019</span>
@@ -162,7 +162,7 @@
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
-                                    <img src="img/ecology.JPG" alt="Новости">
+                                    <img src="img/ecology_2.jpg" alt="Новости">
                                     <div class="news-bg-img"><img src="img/zoom-icon.svg" alt=""></div>
                                 </div>                            
                                 <span>30.01.2019</span>
@@ -203,7 +203,7 @@
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
-                                    <img src="img/car.png" alt="Новости">
+                                    <img src="img/car.jpg" alt="Новости">
                                     <div class="news-bg-img"><img src="img/zoom-icon.svg" alt=""></div>
                                 </div>                            
                                 <span>30.01.2019</span>
@@ -214,7 +214,7 @@
                             <div class="news-wrap">
                                 <a href="#" class="news-link-wrap"></a>
                                 <div class="news-img-section">
-                                    <img src="img/ecology.JPG" alt="Новости">
+                                    <img src="img/ecology_2.jpg" alt="Новости">
                                     <div class="news-bg-img"><img src="img/zoom-icon.svg" alt=""></div>
                                 </div>                            
                                 <span>30.01.2019</span>
