--- a/social.html
+++ b/social.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-8 col-lg-8 col-md-8 col-12">
-                        <img src="img/social-ivushka.jpg" alt="Ивушки">
+                        <img src="img/social-ivushka_1.jpg" alt="Ивушки">
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
                         <div class="power-contacts">
@@ -166,7 +166,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-8 col-lg-8 col-md-8 col-12">
-                        <img src="img/social-children-camp.png" alt="Солнечный">
+                        <img src="img/social-children-camp.jpg" alt="Солнечный">
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
                         <div class="power-contacts">
@@ -215,7 +215,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-8 col-lg-8 col-md-8 col-12">
-                        <img src="img/medical.jpg" alt="Медико-санитарная часть">
+                        <img src="img/medical_1.jpg" alt="Медико-санитарная часть">
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
                         <div class="power-contacts">
@@ -315,7 +315,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-8 col-lg-8 col-md-8 col-12">
-                        <img src="img/house-of-culture.png" alt="Дом культуры Нефтехимик">
+                        <img src="img/house-of-culture.jpg" alt="Дом культуры Нефтехимик">
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-12 social-info">
                         <div class="power-contacts">
